data/derived/comb/progs/unify/prog6619.ml.out
Characters 146-154:
  (h,t::c) in
  ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
